--- a/deber.html
+++ b/deber.html
@@ -11,7 +11,7 @@
 <li>Se refiere al crecimiento de los valores entre 1997-2000 de compañías que basan su negocio en internet.</li>
 <ul>
 
-<h2>Causas</h2>
+<h2<b>Causas</b></h2>
 <ul>
 <li>Especulación en acciones de empresas tecnológicas, debido a que no se podía determinar sus valores de acciones..</li>
 <li>Las empresas tenían el mismo plan de negocio lo cual provocó cambio de expectativas de los inversionistas.</li>
@@ -24,7 +24,6 @@
 <li>Que las empresas tomen en cuenta que la popularidad no equivale a las ganancias</li>
 <li>Considerar el nerviosismo de los especuladores.</li>
 <li>Correlación en bolsa de valores </li>
-
 </ul>
 
 
